attempt to fix out of bounds dots in fab menu

--- a/frontend-public/src/styles/responsivity/resize.css
+++ b/frontend-public/src/styles/responsivity/resize.css
@@ -12,7 +12,7 @@
   border-radius: 50%;
   border: none;
   background: #87ceeb;
-  font-size: 1.5em;
+  /* font-size: 1.5em; */
   cursor: pointer;
   box-shadow: 2px 2px 3px 2px #e3e3e3;
   letter-spacing: normal;
